# views/roles.go
@@ -10,3 +10,14 @@ type Role struct {
 	Users         int64  `json:"users"`
 	Roles         int64  `json:"roles"`
 }
+
+type UpdateRoleRequest struct {
+	// ID            int64  `json:"id"`
+	Title         string `json:"title"`
+	Projects      int64  `json:"projects"`
+	Genres        int64  `json:"genres"`
+	AgeCategories int64  `json:"age_categories"`
+	Types         int64  `json:"types"`
+	Users         int64  `json:"users"`
+	Roles         int64  `json:"roles"`
+}
